==> BerkeleyLab/Marble-MMC/board_support/marblemini_v1/marble_board.c <==
#include "chip.h"
#include "stopwatch.h"
#include "marble_api.h"
#include "string.h"
#include <stdio.h>
#define UART_BAUD_RATE 115200
#define UART_SEND_RB_SZ 128
#define UART_RECV_RB_SZ 32

int marble_UART_send(const char *str, int size)
{
   int sent=0;
   do {
      sent += Chip_UART_SendRB(LPC_UART0, &txring, str+sent, size-sent);
      for (int wait_cnt = UART_WAIT; wait_cnt > 0; wait_cnt--) {} // Busy-wait
   } while (sent < size);

   return sent;
}

int marble_UART_recv(char *str, int size)
{
   return Chip_UART_ReadRB(LPC_UART0, &rxring, str, size);
}

void marble_LED_toggle(uint8_t led_num)
{
   if (led_num < MAXLEDS) {
      Chip_GPIO_SetPinToggle(LPC_GPIO, ledports[led_num], ledpins[led_num]);
   }
}

void marble_FMC_pwr(bool on)
{
   const uint8_t fmc_port = 1;
   // EN_FMC1_P12V
   const uint8_t fmc1_pin = 27;
   Chip_GPIO_WriteDirBit(LPC_GPIO, fmc_port, fmc1_pin, true);
   Chip_GPIO_WritePortBit(LPC_GPIO, fmc_port, fmc1_pin, on);

   // EN_FMC2_P12V
   const uint8_t fmc2_pin = 19;
   Chip_GPIO_WriteDirBit(LPC_GPIO, fmc_port, fmc2_pin, true);
   Chip_GPIO_WritePortBit(LPC_GPIO, fmc_port, fmc2_pin, on);
}

void marble_PSU_pwr(bool on)
{
   Chip_GPIO_WriteDirBit(LPC_GPIO, 1, 31, true);
   Chip_GPIO_WritePortBit(LPC_GPIO, 1, 31, on);
}

int marble_I2C_send(I2C_BUS I2C_bus, uint8_t addr, const uint8_t *data, int size) {
   addr = addr >> 1;
   return Chip_I2C_MasterSend(I2C_bus, addr, data, size) != size;
}

int marble_I2C_recv(I2C_BUS I2C_bus, uint8_t addr, uint8_t *data, int size) {
   addr = addr >> 1;
   return Chip_I2C_MasterRead(I2C_bus, addr, data, size) != size;
}

int marble_I2C_cmdrecv(I2C_BUS I2C_bus, uint8_t addr, uint8_t cmd, uint8_t *data, int size) {
   addr = addr >> 1;
   return Chip_I2C_MasterCmdRead(I2C_bus, addr, cmd, data, size) != size;
}

uint32_t marble_MDIO_read(uint16_t reg)
{
   Chip_ENET_StartMIIRead(LPC_ETHERNET, reg);
   while (Chip_ENET_IsMIIBusy(LPC_ETHERNET));
   return Chip_ENET_ReadMIIData(LPC_ETHERNET);
}

uint32_t marble_init(bool use_xtal)
{
   // Must happen before any other clock manipulations:
   SystemCoreClockUpdate(); /* Update the value of SystemCoreClock */

   if (use_xtal) {
      Chip_SetupXtalClocking();
   } else {
      Chip_SetupIrcClocking(); // 120 MHz based on 12 MHz internal clock
   }

   SystemCoreClockUpdate(); /* Update the value of SystemCoreClock (120 MHz) */

   // Initialize system stopwatch
   StopWatch_Init();

   marble_LED_init();
   marble_SW_init();
   marble_UART_init();

   // Init GPIO interrupts
   marble_GPIOint_init();

   // Init I2C busses in interrupt mode
   marble_I2C_init(I2C0, !I2C_POLL);
   marble_I2C_init(I2C1, !I2C_POLL);
   marble_I2C_init(I2C2, !I2C_POLL);
   I2C_IPMB = I2C0;
   I2C_PM = I2C1;
   I2C_FPGA = I2C2;

   // Init SSP busses
   marble_SSP_init(LPC_SSP0);
   //marble_SSP_init(LPC_SSP1);
   SSP_FPGA = LPC_SSP0;
   SSP_PMOD = LPC_SSP1;

   marble_MDIO_init();

   return SystemCoreClock;
}
