==> BerkeleyLab/Marble-MMC/Src/marble_board.c <==
#include "stm32f2xx_hal.h"
#include "main.h"
#include "marble_api.h"
#include "string.h"
#include <stdio.h>

int marble_UART_send(const char *str, int size)
{
   HAL_UART_Transmit(&huart1, str, size, 1000);
   //int sent;
   //int wait_cnt;
   //sent = Chip_UART_SendRB(LPC_UART0, &txring, str, size);
   //if (sent < size) {
    //  for (wait_cnt = UART_WAIT; wait_cnt > 0; wait_cnt--) {} // Busy-wait
      //sent += Chip_UART_SendRB(LPC_UART0, &txring, str+sent, size-sent);
   //}
   return 1;
}

int marble_UART_recv(char *str, int size)
{
	if(__HAL_UART_GET_FLAG(&huart1, UART_FLAG_RXNE) == SET){
		HAL_UART_Receive(&huart1, str, size, 100);
		return 1;
	}else{
		return 0;
	}
	//Chip_UART_ReadRB(LPC_UART0, &rxring, str, size);

}

void marble_LED_toggle(uint8_t led_num)
{

   HAL_GPIO_TogglePin(GPIOE, GPIO_PIN_0);
   HAL_GPIO_TogglePin(GPIOE, GPIO_PIN_1);
   HAL_GPIO_TogglePin(GPIOE, GPIO_PIN_2);
}

void marble_FMC_pwr(bool on)
{
	HAL_GPIO_WritePin(GPIOD, GPIO_PIN_9, on);
	HAL_GPIO_WritePin(GPIOD, GPIO_PIN_10, on);
}

void marble_PSU_pwr(bool on)
{
	if(on == false){
		SystemClock_Config_HSI(); //switch to internal clock source, external clock is powered from 3V3!
		HAL_Delay(50);
		HAL_GPIO_WritePin(GPIOD, GPIO_PIN_11, on);
	}else{
		HAL_GPIO_WritePin(GPIOD, GPIO_PIN_11, on);
		SystemClock_Config(); //switch back to external clock source
	}

   //Chip_GPIO_WriteDirBit(LPC_GPIO, 1, 31, true);
   //Chip_GPIO_WritePortBit(LPC_GPIO, 1, 31, on);
}

int marble_I2C_send(I2C_BUS I2C_bus, uint8_t addr, const uint8_t *data, int size) {
   //addr = addr >> 1;
   switch (I2C_bus) {
      case I2C_IPMB:
         return 0; //Chip_I2C_MasterSend(I2C0, addr, data, size);
      case I2C_PM:
    	  return HAL_I2C_Master_Transmit(&hi2c3,(uint16_t)addr, data, size, HAL_MAX_DELAY);
      case I2C_FPGA:
    	  return HAL_I2C_Master_Transmit(&hi2c1, (uint16_t)addr, data, size, HAL_MAX_DELAY);
   }
}

int marble_I2C_recv(I2C_BUS I2C_bus, uint8_t addr, uint8_t *data, int size) {
   //addr = addr >> 1;
   switch (I2C_bus) {
      case I2C_IPMB:
         //return HAL_I2C_Master_Transmit(&hi2c1, addr, data, size, HAL_MAX_DELAY);
    	 return 0;
      case I2C_PM:
         return HAL_I2C_Master_Receive(&hi2c3, (uint16_t)addr, data, size, HAL_MAX_DELAY);
      case I2C_FPGA:
    	  return HAL_I2C_Master_Receive(&hi2c1, (uint16_t)addr, data, size, HAL_MAX_DELAY);
   }
}

int marble_I2C_cmdrecv(I2C_BUS I2C_bus, uint8_t addr, uint8_t cmd, uint8_t *data, int size) {
   //addr = addr >> 1;
   switch (I2C_bus) {
      case I2C_IPMB:
         return 0; //Chip_I2C_MasterCmdRead(I2C0, addr, cmd, data, size);
      case I2C_PM:
         return HAL_I2C_Mem_Read(&hi2c3, (uint16_t)addr, cmd, 1, data, size, HAL_MAX_DELAY);
      case I2C_FPGA:
    	  return HAL_I2C_Mem_Read(&hi2c1, (uint16_t)addr, cmd, 1, data, size, HAL_MAX_DELAY);
   }
}

uint32_t marble_MDIO_read(uint8_t reg)
{
	uint32_t value;
	printf("\r\nPHYread Stat: %d\r\n", HAL_ETH_ReadPHYRegister(&heth, reg, &value));
	//printf("\r\nPHYread Stat: %d\r\n", HAL_ETH_ReadPHYRegister(&heth, reg, &value));
	return value;
}

void marble_init(bool use_xtal)
{
   // Must happen before any other clock manipulations:
   HAL_Init();
   SystemClock_Config_HSI();

   MX_GPIO_Init();
   marble_PSU_pwr(true);
   MX_USART1_UART_Init();
   MX_USART2_UART_Init();
   MX_USART3_UART_Init();
   MX_ETH_Init();
   MX_I2C1_Init();
   MX_I2C3_Init();
   MX_SPI1_Init();
   MX_SPI2_Init();

   marble_LED_init();
   marble_SW_init();
   marble_UART_init();
   ina219_init();
   adn4600_init();

   printf("** Marble Test ** \n");
   printf("** Init done ** \n");

   // Init I2C busses in interrupt mode
   //marble_I2C_init(I2C0, !I2C_POLL);
   //marble_I2C_init(I2C1, !I2C_POLL);
   //marble_I2C_init(I2C2, !I2C_POLL);

   // Init SSP busses
   //marble_SSP_init(LPC_SSP0);
   //marble_SSP_init(LPC_SSP1);

   //marble_MDIO_init();

   /* Configure the SysTick for 1 s interrupts */
   SysTick_Config(SystemCoreClock * 1);
}
